initial interactivity between list and map

--- a/src/components/DisplayMap/map.scss
+++ b/src/components/DisplayMap/map.scss
@@ -7,10 +7,10 @@
     }
 }
 .leaflet-container {
-    width: 100%;
+    width: 70%;
     height: 100%;
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     bottom: 0;
 }
