--- a/src/components/DisplayMap/map.scss
+++ b/src/components/DisplayMap/map.scss
@@ -1,11 +1,3 @@
-.leaflet-pane.leaflet-marker-pane img {
-    opacity: 0.9;
-    &:hover {
-        cursor: pointer;
-        transform: scale(1.2);
-        opacity: 1;
-    }
-}
 .leaflet-container {
     width: 70%;
     height: 100%;
@@ -13,4 +5,28 @@
     top: 0;
     right: 0;
     bottom: 0;
+}
+
+.icon_container {
+    .development-icon {
+        background: url('../../assets/development-icon.svg');
+        width: 100%;
+        height: 100%;
+        background-size: 100%;
+        transition: all .1s ease-in-out;
+        &.active {
+            transform: scale(1.2);
+            background: url('../../assets/development-icon-active.svg');
+            background-size: 100%;
+        }
+        &.hovered {
+            transform: scale(1.2);
+        }
+    }
+    &:hover {
+        cursor: pointer;
+        .development-icon {
+            transform: scale(1.2);
+        }
+    }
 }
