set a loading state for the list

--- a/src/components/List/list.scss
+++ b/src/components/List/list.scss
@@ -13,7 +13,7 @@
 
 .list-item {
     margin: 0 auto;
-    border: 1px solid #333;
+    border: 1px solid #a5a5a5;
     padding: 10px;
     margin-bottom: 15px;
     width: -webkit-calc(100% - 20px);
@@ -21,6 +21,7 @@
     width:         calc(100% - 20px);
     background: #fff;
     opacity: 0.9;
+    border-radius: 2px;
 
     &:hover, &.hovered {
         cursor: pointer;
@@ -37,3 +38,55 @@
         opacity: 1;
     }
 }
+
+
+
+.card-loader {
+    background-color: #fff;
+    border: 1px solid #a5a5a5;
+    padding: 8px;
+    position: relative;
+    height: 200px;
+    overflow: hidden;
+  
+    &:only-child {
+      margin-top:0;
+    }
+  
+    &:before {
+      content: '';
+      height: 110px;
+      display: block;
+      background-color: #bbbbbb;
+      box-shadow: -48px 78px 0 -48px #bbbbbb, -51px 102px 0 -51px #bbbbbb;
+    }
+  
+    &:after {
+      content: '';
+      background-color: #333;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      animation-duration: 0.6s;
+      animation-iteration-count: infinite;
+      animation-name: loader-animate;
+      animation-timing-function: linear;
+      background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.6) 30%, rgba(255,255,255,0) 81%);
+      background: -o-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.6) 30%, rgba(255,255,255,0) 81%);
+      background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,0.6) 30%, rgba(255,255,255,0) 81%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=1 );
+    }
+  }
+   
+  
+  // Loader animation
+  @keyframes loader-animate{
+   0%{
+      transform: translate3d(-100%, 0, 0);
+    }
+   100%{
+      transform: translate3d(100%, 0, 0);
+    }
+  }
