build initial filter for habitable rooms

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,10 @@
 body {
     color: #292929;
 }
+.ReactModal__Overlay {
+    z-index: 9998;
+
+    .ReactModal__Content {
+        z-index: 9999;
+    }
+}
