--- a/src/components/DisplayMap/map.scss
+++ b/src/components/DisplayMap/map.scss
@@ -1,10 +1,15 @@
-.leaflet-container {
+.leaflet-container:not(.single-page-map) {
     width: 70%;
     height: 100%;
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
+}
+.single-page-map {
+    position: relative;
+    width: 100%;
+    height: 450px;
 }
 
 .icon_container {
