--- a/src/components/filter-styles.scss
+++ b/src/components/filter-styles.scss
@@ -13,8 +13,19 @@
             font-size: 18px;
             display: inline-block;
             width: 45%;
+            position: relative;
             &:first-of-type {
                 margin-right: 15px;
+
+                &:after {
+                    content: '';
+                    height: 2px;
+                    width: 9px;
+                    background: #333;
+                    position: absolute;
+                    right: -13px;
+                    top: 42px;
+                }
             }
         }
         input {
@@ -83,7 +94,7 @@
 }
 
 .input-range {
-    width: 85%;
+    width: 85% !important;
     margin-left: 8px;
     margin-bottom: 13px;
     .input-range__label {
@@ -101,6 +112,6 @@
     }
 
     @media screen and (max-width: 600px) {
-        width: 95%;
+        width: 95% !important;
     }
 }
