small updates to filters

--- a/src/components/filter-styles.scss
+++ b/src/components/filter-styles.scss
@@ -2,11 +2,31 @@
     z-index: 9998;
 
     .ReactModal__Content {
+        position: absolute;
+        right: 40px;
+        bottom: 40px;
+        border: 1px solid rgb(204, 204, 204);
+        background: rgb(255, 255, 255);
+        overflow: auto;
+        border-radius: 4px;
+        outline: none;
+        padding: 20px;
         z-index: 9999;
         top: 88px !important;
         left: 15px !important;
         width: 350px;
         height: 200px;
+
+        &.residential-modal {
+            left: 161px !important;
+        }
+        &.gdv-modal {
+            left: 305px !important;
+        }
+        &.stories-modal {
+            left: 420px !important;
+        }
+
 
         label {
             font-weight: 600;
