--- a/src/components/DisplayMap/map.scss
+++ b/src/components/DisplayMap/map.scss
@@ -37,6 +37,7 @@
             transform: scale(1.2);
             background: url('../../assets/development-icon-active.svg');
             background-size: 100%;
+            cursor: default;
         }
         &.hovered {
             transform: scale(1.2);
