reorder filter buttons

--- a/src/components/DisplayMap/map.scss
+++ b/src/components/DisplayMap/map.scss
@@ -18,6 +18,7 @@
 .single-page-map {
     position: relative;
     width: calc(100% - 30px);
+    overflow-x: scroll;
     height: 450px;
     cursor: grab;
 
