--- a/src/components/List/list.scss
+++ b/src/components/List/list.scss
@@ -78,6 +78,13 @@
         padding: 3px;
         padding-right: 10px;
         border-radius: 3px;
+        span {
+          margin-right: 5px;
+          -webkit-transition: 0.2s ease;
+          -moz-transition: 0.2s ease;
+          -o-transition: 0.2s ease;
+          transition: 0.2s ease;
+        }
 
         &:focus {
           outline: none !important;
@@ -85,28 +92,25 @@
         }
 
         &:hover, &:focus {
-          &:after {
-            left: 0.45em;
+          span {
+            margin-right: 10px;
           }
         }
 
         &:after {
-          border-style: solid;
-          border-width: 0.15em 0.15em 0 0;
-          content: '';
-          display: inline-block;
-          height: 0.45em;
-          left: 0.15em;
-          position: relative;
-          top: 0.15em;
-          vertical-align: top;
-          width: 0.45em;
-          transform: rotate(45deg);
-          margin-top: 2px;
-          -webkit-transition: 0.2s ease;
-          -moz-transition: 0.2s ease;
-          -o-transition: 0.2s ease;
-          transition: 0.2s ease;
+          // border-style: solid;
+          // border-width: 0.15em 0.15em 0 0;
+          // content: '';
+          // display: inline-block;
+          // height: 0.45em;
+          // left: 0.15em;
+          // position: relative;
+          // top: 0.15em;
+          // vertical-align: top;
+          // width: 0.45em;
+          // transform: rotate(45deg);
+          // margin-top: 2px;
+
         }
       }
     }
