--- a/src/components/List/list.scss
+++ b/src/components/List/list.scss
@@ -11,6 +11,7 @@
     height: -webkit-calc(100% - 30px);
     height:    -moz-calc(100% - 30px);
     height:         calc(100% - 30px);
+    padding-bottom: 60px;
 
     @media screen and (max-width: 600px) {
       width: -webkit-calc(100% - 30px);
